--- a/main.css
+++ b/main.css
@@ -73,11 +73,16 @@ body {
     opacity: 0.5;
     transition-property: opacity;
     transition-duration: 0.3s;
+    margin-right: 10px;
+    margin-top:18px;
+    width: 50px;
+    height: 25px;
+    
 }
 .logbutt{
     background-color: black;
     color: white;
-    width: 50px;
+    width: 100px;
     
 }
 .logbutt button:hover{
@@ -108,6 +113,7 @@ body {
     color:azure;
     min-height:85px;
     width:184px;
+    
     /* display: flex;
     flex-direction: column;
     justify-content:space-evenly;
@@ -128,9 +134,13 @@ body {
     opacity: 0.7;
     transition-property: opacity;
     transition-duration: 0.3s;
+    margin-left: 20px;
+   
     
 }
-
+.all ul{
+    margin-top:30px
+}
 .all ul li:hover{
     opacity: 1;
 }
